--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -28,7 +28,7 @@ right_banner:
   alt_text: "פרסומת לדוגמה"
 inline_ads:
   enabled: true
-  frequency: 7
+  frequency: 14
   ads_list:
     - type: "text"
       title: "רוצים גישה למאגר המלא?"
@@ -37,8 +37,8 @@ inline_ads:
       link_url: "https://docs.google.com/forms/d/e/1FAIpQLScfzba0porXVkKOPQR2OhY2kevGLFoPvnAkjC-Cs6KLm5idLg/viewform?usp=pp_url&entry.1611797152=https://shir-bot.ze-kal.top"
       icon_class: "fas fa-database"
     - type: "image"
-      link_url: "https://nhlocal.github.io/"
-      image_url: "/assets/images/ads/nhlocal-banner.png"
+      link_url: "https://www.youtube.com/@Ze-Kal"
+      image_url: "/assets/images/ads/ze-kal-channel2.png"
       alt_text: "פרסומת לסקריפטים של NHLOCAL"
     - type: "text"
       title: "מסדר הסינגלים - בחינם!"
