מייל דינמי עבור הצעת פרסום, הצגת פרסומות באופן דינמי למיקוד משופר

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -14,7 +14,9 @@
 default_cta:
   cta_text: "פרסם כאן"
   cta_subtext: "במחירי השקה מיוחדים"
-  link_url: "mailto:mesader.singelim@gmail.com?subject=פרסום באתר שיר-בוט"
+  email: "mesader.singelim@gmail.com"
+  subject: "פרסום באתר שיר-בוט"
+  body: "שלום, אשמח לקבל פרטים נוספים על אפשרויות הפרסום באתר שיר-בוט."
 left_banner:
   enabled: false
   image_url: "/assets/images/ads/ad-left-placeholder.png"
@@ -28,7 +30,7 @@ right_banner:
   alt_text: "פרסומת לדוגמה"
 inline_ads:
   enabled: true
-  frequency: 22
+  frequency: 25
   ads_list:
     - type: "text"
       title: "רוצים גישה למאגר המלא?"
@@ -46,3 +48,11 @@ inline_ads:
       cta_text: "להורדה בחינם"
       link_url: "https://singles-sorter.ze-kal.top?utm_source=shir_bot_inline_ad&utm_medium=site"
       icon_class: "fas fa-magic"
+    - type: "email"
+      title: "רוצה לפרסם כאן?"
+      text: "הגע לאלפי חובבי מוזיקה יהודית. מחירים מיוחדים למפרסמים חדשים."
+      cta_text: "צור קשר לפרטים"
+      email: "mesader.singelim@gmail.com"
+      subject: "פרסום מודעה משולבת באתר שיר-בוט"
+      body: "שלום, ראיתי את המודעה המשולבת ואני מעוניין/ת בפרטים על פרסום."
+      icon_class: "fas fa-bullhorn"
