שיפור: מעקב אחרי מודעות + הגדרה משופרת למודעות בפוטר

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -17,17 +17,20 @@ default_cta:
   email: "mesader.singelim@gmail.com"
   subject: "פרסום באתר שיר-בוט"
   body: "שלום, אשמח לקבל פרטים נוספים על אפשרויות הפרסום באתר שיר-בוט."
+  tracking_id: "cta-contact-for-ad"
 left_banner:
   enabled: false
   image_url: "/assets/images/ads/ad-left-placeholder.png"
   link_url: "https://example.com/left-ad"
   alt_text: "פרסומת צד שמאל"
+  tracking_id: "left-ad-placeholder"
 right_banner:
   enabled: true
   type: "image"
   image_url: "/assets/images/ads/ze-kal-channel.png"
   link_url: "https://www.youtube.com/@Ze-Kal"
   alt_text: "פרסומת לדוגמה"
+  tracking_id: "ze-kal-youtube-channel"
 inline_ads:
   enabled: true
   frequency: 25
@@ -38,16 +41,19 @@ inline_ads:
       cta_text: "לפרטים והרשמה"
       link_url: "https://docs.google.com/forms/d/e/1FAIpQLScfzba0porXVkKOPQR2OhY2kevGLFoPvnAkjC-Cs6KLm5idLg/viewform?usp=pp_url&entry.1611797152=https://shir-bot.ze-kal.top"
       icon_class: "fas fa-database"
+      tracking_id: "inline-drive-access-form"
     - type: "image"
       link_url: "https://www.youtube.com/@Ze-Kal"
       image_url: "/assets/images/ads/ze-kal-channel2.png"
       alt_text: "פרסומת לסקריפטים של NHLOCAL"
+      tracking_id: "inline-ze-kal-youtube-channel"
     - type: "text"
       title: "מסדר הסינגלים - בחינם!"
       text: "עשו סדר במוזיקה שלכם באופן אוטומטי. תוכנה חכמה שתמיין ותארגן את כל הסינגלים במחשב שלכם."
       cta_text: "להורדה בחינם"
       link_url: "https://singles-sorter.ze-kal.top?utm_source=shir_bot_inline_ad&utm_medium=site"
       icon_class: "fas fa-magic"
+      tracking_id: "inline-singles-sorter-download"
     - type: "email"
       title: "רוצה לפרסם כאן?"
       text: "הגע לאלפי חובבי מוזיקה יהודית. מחירים מיוחדים למפרסמים חדשים."
@@ -56,3 +62,18 @@ inline_ads:
       subject: "פרסום מודעה משולבת באתר שיר-בוט"
       body: "שלום, ראיתי את המודעה המשולבת ואני מעוניין/ת בפרטים על פרסום."
       icon_class: "fas fa-bullhorn"
+      tracking_id: "inline-email-contact-for-ad"
+footer_banner:
+  enabled: true
+  rotation_delay_ms: 5000
+  ads_list:
+    - type: "link"
+      tracking_id: "footer-music-drive-access-form"
+      text: "קבלו גישה ל-500 ג'יגה של תוכן מוזיקלי <b>לשנה מלאה</b>"
+      cta_text: "הרשמו כאן!"
+      link_url: "https://docs.google.com/forms/d/e/1FAIpQLScfzba0porXVkKOPQR2OhY2kevGLFoPvnAkjC-Cs6KLm5idLg/viewform?usp=pp_url&entry.1611797152=https://shir-bot.ze-kal.top"
+    - type: "link"
+      tracking_id: "footer-beatplus-store"
+      text: "<b>ביט פלוס-הבית של המוזיקאים!</b> מגוון כלי נגינה, מקצבים, ציוד הגברה ומדריכים"
+      cta_text: "בקרו באתר"
+      link_url: "https://beatplus.co.il?utm_source=shir-bot.ze-kal.top&utm_medium=footer_ad"
