--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -29,15 +29,15 @@ right_banner:
   type: "image"
   image_url: "/assets/images/ads/ze-kal-channel.png"
   link_url: "https://www.youtube.com/@Ze-Kal"
-  alt_text: "פרסומת לדוגמה"
+  alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
   tracking_id: "ze-kal-youtube-channel"
 inline_ads:
   enabled: true
   frequency: 25
   ads_list:
     - type: "text"
-      title: "רוצים גישה למאגר המלא?"
-      text: "מאות ג'יגה של מוזיקה יהודית איכותית מחכים לכם. הרשמו עכשיו וקבלו גישה מיידית לדרייב!"
+      title: "רוצים גישה למאגר המוזיקה המלא?"
+      text: "מאגר המוזיקה היהודית הגדול בעולם, עם מעל 500 ג'יגה של תוכן איכותי, מחכה לכם. הרשמו עכשיו וקבלו גישה מיידית!"
       cta_text: "לפרטים והרשמה"
       link_url: "https://docs.google.com/forms/d/e/1FAIpQLScfzba0porXVkKOPQR2OhY2kevGLFoPvnAkjC-Cs6KLm5idLg/viewform?usp=pp_url&entry.1611797152=https://shir-bot.ze-kal.top"
       icon_class: "fas fa-database"
@@ -45,11 +45,11 @@ inline_ads:
     - type: "image"
       link_url: "https://www.youtube.com/@Ze-Kal"
       image_url: "/assets/images/ads/ze-kal-channel2.png"
-      alt_text: "פרסומת לסקריפטים של NHLOCAL"
+      alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
       tracking_id: "inline-ze-kal-youtube-channel"
     - type: "text"
-      title: "מסדר הסינגלים - בחינם!"
-      text: "עשו סדר במוזיקה שלכם באופן אוטומטי. תוכנה חכמה שתמיין ותארגן את כל הסינגלים במחשב שלכם."
+      title: "תוכנת מסדר הסינגלים - להורדה חינם!"
+      text: "טובעים בים של סינגלים? תוכנה חכמה תמיין לכם את המוזיקה אוטומטית לתיקיות לפי אמן ותחסוך לכם שעות של עבודה!"
       cta_text: "להורדה בחינם"
       link_url: "https://singles-sorter.ze-kal.top?utm_source=shir_bot_inline_ad&utm_medium=site"
       icon_class: "fas fa-magic"
@@ -69,7 +69,7 @@ footer_banner:
   ads_list:
     - type: "link"
       tracking_id: "footer-music-drive-access-form"
-      text: "קבלו גישה ל-500 ג'יגה של תוכן מוזיקלי <b>לשנה מלאה</b>"
+      text: "גישה למאגר המוזיקה היהודית הגדול בעולם! <b>500GB במחיר מוזל</b>"
       cta_text: "הרשמו כאן!"
       link_url: "https://docs.google.com/forms/d/e/1FAIpQLScfzba0porXVkKOPQR2OhY2kevGLFoPvnAkjC-Cs6KLm5idLg/viewform?usp=pp_url&entry.1611797152=https://shir-bot.ze-kal.top"
     - type: "link"
