--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -12,11 +12,11 @@
 # ==============================================================================
 
 default_cta:
-  cta_text: "פרסם כאן"
-  cta_subtext: "במחירי השקה מיוחדים"
+  cta_text: "פרסמו כאן"
+  cta_subtext: "אלפי משתמשים ומעל 50,000 צפיות בחודש"
   email: "mesader.singelim@gmail.com"
-  subject: "פרסום באתר שיר-בוט"
-  body: "שלום, אשמח לקבל פרטים נוספים על אפשרויות הפרסום באתר שיר-בוט."
+  subject: "פרטים על אפשרויות פרסום באתר שיר-בוט"
+  body: "שלום, אנו מעוניינים לקבל פרטים נוספים על אפשרויות הפרסום באתר"
   tracking_id: "cta-contact-for-ad"
 left_banner:
   enabled: false
@@ -55,12 +55,12 @@ inline_ads:
       icon_class: "fas fa-magic"
       tracking_id: "inline-singles-sorter-download"
     - type: "email"
-      title: "רוצה לפרסם כאן?"
-      text: "הגע לאלפי חובבי מוזיקה יהודית. מחירים מיוחדים למפרסמים חדשים."
-      cta_text: "צור קשר לפרטים"
+      title: "רוצים להגיע לקהל היעד שלכם?"
+      text: "פרסמו באתר ותהנו מחשיפה למעל 50,000 צפיות בחודש מאלפי חובבי מוזיקה יהודית. פלטפורמה מצוינת להגיע לקהל יעד ממוקד ואיכותי"
+      cta_text: "צרו קשר לפרטים נוספים"
       email: "mesader.singelim@gmail.com"
-      subject: "פרסום מודעה משולבת באתר שיר-בוט"
-      body: "שלום, ראיתי את המודעה המשולבת ואני מעוניין/ת בפרטים על פרסום."
+      subject: "בקשה לפרטים על פרסום באתר שיר-בוט"
+      body: "שלום, אנו מעוניינים לקבל פרטים נוספים על אפשרויות הפרסום באתר"
       icon_class: "fas fa-bullhorn"
       tracking_id: "inline-email-contact-for-ad"
 footer_banner:
