--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -60,6 +60,20 @@ inline_ads:
   frequency: 13
   ads_list:
     - type: "image"
+      link_url: "https://www.youtube.com/@Ze-Kal"
+      image_url: "/assets/images/ads/ze-kal-channel2.png"
+      alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
+      tracking_id: "inline-ze-kal-youtube-channel"
+    - type: "email"
+      title: "רוצים להגיע לקהל היעד שלכם?"
+      text: "פרסמו באתר ותהנו מחשיפה למעל 50,000 צפיות בחודש מאלפי חובבי מוזיקה יהודית. פלטפורמה מצוינת להגיע לקהל יעד ממוקד ואיכותי"
+      cta_text: "צרו קשר לפרטים נוספים"
+      email: "mesader.singelim@gmail.com"
+      subject: "בקשה לפרטים על פרסום באתר שיר-בוט"
+      body: "שלום, אנו מעוניינים לקבל פרטים נוספים על אפשרויות הפרסום באתר"
+      icon_class: "fas fa-bullhorn"
+      tracking_id: "inline-email-contact-for-ad"
+    - type: "image"
       link_url: "https://www.kley-meitar.co.il/"
       image_url: "/assets/images/ads/kley-meitar1.jpg"
       alt_text: "כלי מיתר - כל הגיטרות במקום אחד"
@@ -71,27 +85,13 @@ inline_ads:
       link_url: "https://docs.google.com/forms/d/e/1FAIpQLScfzba0porXVkKOPQR2OhY2kevGLFoPvnAkjC-Cs6KLm5idLg/viewform?usp=pp_url&entry.1611797152=https://shir-bot.ze-kal.top"
       icon_class: "fas fa-database"
       tracking_id: "inline-drive-access-form"
-    - type: "image"
-      link_url: "https://www.youtube.com/@Ze-Kal"
-      image_url: "/assets/images/ads/ze-kal-channel2.png"
-      alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
-      tracking_id: "inline-ze-kal-youtube-channel"
-    - type: "text"
-      title: "תוכנת מסדר הסינגלים - להורדה חינם!"
-      text: "טובעים בים של סינגלים? תוכנה חכמה תמיין לכם את המוזיקה אוטומטית לתיקיות לפי אמן ותחסוך לכם שעות של עבודה!"
-      cta_text: "להורדה בחינם"
-      link_url: "https://singles-sorter.ze-kal.top?utm_source=shir_bot_inline_ad&utm_medium=site"
-      icon_class: "fas fa-magic"
-      tracking_id: "inline-singles-sorter-download"
-    - type: "email"
-      title: "רוצים להגיע לקהל היעד שלכם?"
-      text: "פרסמו באתר ותהנו מחשיפה למעל 50,000 צפיות בחודש מאלפי חובבי מוזיקה יהודית. פלטפורמה מצוינת להגיע לקהל יעד ממוקד ואיכותי"
-      cta_text: "צרו קשר לפרטים נוספים"
-      email: "mesader.singelim@gmail.com"
-      subject: "בקשה לפרטים על פרסום באתר שיר-בוט"
-      body: "שלום, אנו מעוניינים לקבל פרטים נוספים על אפשרויות הפרסום באתר"
-      icon_class: "fas fa-bullhorn"
-      tracking_id: "inline-email-contact-for-ad"
+    # - type: "text"
+      # title: "תוכנת מסדר הסינגלים - להורדה חינם!"
+      # text: "טובעים בים של סינגלים? תוכנה חכמה תמיין לכם את המוזיקה אוטומטית לתיקיות לפי אמן ותחסוך לכם שעות של עבודה!"
+      # cta_text: "להורדה בחינם"
+      # link_url: "https://singles-sorter.ze-kal.top?utm_source=shir_bot_inline_ad&utm_medium=site"
+      # icon_class: "fas fa-magic"
+      # tracking_id: "inline-singles-sorter-download"
 
 # ==============================================================================
 # פרסומות תחתונות (Footer)
