עדכון: מודעות עם פרמטרי utm

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -34,7 +34,7 @@ right_banner:
   enabled: true
   type: "image"
   image_url: "/assets/images/ads/kley-meitar2.jpg"
-  link_url: "https://www.kley-meitar.co.il/"
+  link_url: "https://www.kley-meitar.co.il/?utm_source=shir-bot&utm_medium=referral"
   alt_text: "כלי מיתר - כל הגיטרות במקום אחד"
   tracking_id: "kley-meitar-right-banner"
 
@@ -74,7 +74,7 @@ inline_ads:
       icon_class: "fas fa-bullhorn"
       tracking_id: "inline-email-contact-for-ad"
     - type: "image"
-      link_url: "https://www.kley-meitar.co.il/"
+      link_url: "https://www.kley-meitar.co.il/?utm_source=shir-bot&utm_medium=referral"
       image_url: "/assets/images/ads/kley-meitar1.jpg"
       alt_text: "כלי מיתר - כל הגיטרות במקום אחד"
       tracking_id: "inline-kley-meitar"
