עדכון: דף מידע על פרסום

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -12,12 +12,10 @@
 # ==============================================================================
 
 default_cta:
-  cta_text: "פרסמו כאן"
-  cta_subtext: "אלפי משתמשים ומעל 50,000 צפיות בחודש"
-  email: "mesader.singelim@gmail.com"
-  subject: "פרטים על אפשרויות פרסום באתר שיר-בוט"
-  body: "שלום, אנו מעוניינים לקבל פרטים נוספים על אפשרויות הפרסום באתר"
-  tracking_id: "cta-contact-for-ad"
+  cta_text: "פרסמו אצלנו"
+  cta_subtext: "חשיפה לאלפי משתמשים בקהל יעד ממוקד"
+  link_url: "/advertise/"
+  tracking_id: "cta-sidebar-advertise-page"
 left_banner:
   enabled: false
   image_url: "/assets/images/ads/ad-left-placeholder.png"
@@ -64,15 +62,13 @@ inline_ads:
       image_url: "/assets/images/ads/ze-kal-channel2.png"
       alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
       tracking_id: "inline-ze-kal-youtube-channel"
-    - type: "email"
+    - type: "link"
       title: "רוצים להגיע לקהל היעד שלכם?"
-      text: "פרסמו באתר ותהנו מחשיפה למעל 50,000 צפיות בחודש מאלפי חובבי מוזיקה יהודית. פלטפורמה מצוינת להגיע לקהל יעד ממוקד ואיכותי"
-      cta_text: "צרו קשר לפרטים נוספים"
-      email: "mesader.singelim@gmail.com"
-      subject: "בקשה לפרטים על פרסום באתר שיר-בוט"
-      body: "שלום, אנו מעוניינים לקבל פרטים נוספים על אפשרויות הפרסום באתר"
+      text: "פרסמו באתר ותהנו מחשיפה לאלפי חובבי מוזיקה יהודית. פלטפורמה מצוינת להגיע לקהל יעד ממוקד ואיכותי."
+      cta_text: "לפרטים והצעת מחיר"
+      link_url: "/advertise/"
       icon_class: "fas fa-bullhorn"
-      tracking_id: "inline-email-contact-for-ad"
+      tracking_id: "inline-cta-advertise-page"
     - type: "image"
       link_url: "https://www.kley-meitar.co.il/?utm_source=shir-bot&utm_medium=referral"
       image_url: "/assets/images/ads/kley-meitar1.jpg"
