feat(advertise): Add pricing highlight to YAML ads file

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -13,7 +13,7 @@
 
 default_cta:
   cta_text: "פרסמו אצלנו"
-  cta_subtext: "חשיפה לאלפי משתמשים בקהל יעד ממוקד"
+  cta_subtext: 'חשיפה ממוקדת לקהל איכותי. החל מ-50 ש"ח'
   link_url: "/advertise/"
   tracking_id: "cta-sidebar-advertise-page"
 left_banner:
@@ -64,7 +64,7 @@ inline_ads:
       tracking_id: "inline-ze-kal-youtube-channel"
     - type: "link"
       title: "רוצים להגיע לקהל היעד שלכם?"
-      text: "פרסמו באתר ותהנו מחשיפה לאלפי חובבי מוזיקה יהודית. פלטפורמה מצוינת להגיע לקהל יעד ממוקד ואיכותי."
+      text: 'הגיעו לאלפי חובבי מוזיקה עם מסר ממוקד. פרסום אפקטיבי ומשתלם החל מ-50 ש"ח בלבד.'
       cta_text: "לפרטים והצעת מחיר"
       link_url: "/advertise/"
       icon_class: "fas fa-bullhorn"
