הגהה: הסרת נקודות מסופי משפטים

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -64,7 +64,7 @@ inline_ads:
       tracking_id: "inline-ze-kal-youtube-channel"
     - type: "link"
       title: "רוצים להגיע לקהל היעד שלכם?"
-      text: 'הגיעו לאלפי חובבי מוזיקה עם מסר ממוקד. פרסום אפקטיבי ומשתלם החל מ-50 ש"ח בלבד.'
+      text: 'הגיעו לאלפי חובבי מוזיקה עם מסר ממוקד. פרסום אפקטיבי ומשתלם החל מ-50 ש"ח בלבד'
       cta_text: "לפרטים והצעת מחיר"
       link_url: "/advertise/"
       icon_class: "fas fa-bullhorn"
