עיצוב: מודעת פרסום ברירת מחדל
שיפור העיצוב והניסוח

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -12,10 +12,16 @@
 # ==============================================================================
 
 default_cta:
-  cta_text: "פרסמו אצלנו"
-  cta_subtext: 'חשיפה ממוקדת לקהל איכותי. החל מ-50 ש"ח'
+  icon_class: "fas fa-bullseye"
+  title: "העסק שלך. הקהל הנכון."
+  text: "חבר את המותג שלך לאלפי חובבי מוזיקה יהודית. פרסום ממוקד ואיכותי, החל מ-50 ש\"ח בלבד!"
+  button_text: "קבלו הצעת מחיר"
   link_url: "/advertise/"
   tracking_id: "cta-sidebar-advertise-page"
+
+# ==============================================================================
+# פרסומות צד שמאל
+# ==============================================================================
 left_banner:
   enabled: false
   image_url: "/assets/images/ads/ad-left-placeholder.png"
@@ -24,7 +30,7 @@ left_banner:
   tracking_id: "left-ad-placeholder"
 
 # ==============================================================================
-# פרסומות צד
+# פרסומות צד ימין
 # ==============================================================================
 
 # פרסומת פעילה
