מודעות: הוספת מייל מיוזיק

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -37,16 +37,23 @@ left_banner:
 right_banner:
   enabled: true
   type: "image"
-  image_url: "/assets/images/ads/kley-meitar2.jpg"
-  link_url: "https://www.kley-meitar.co.il/?utm_source=shir-bot&utm_medium=referral"
-  alt_text: "כלי מיתר - כל הגיטרות במקום אחד"
-  tracking_id: "kley-meitar-right-banner"
+  image_url: "/assets/images/ads/mail-music-side.png"
+  link_url: "https://l-p.site/הצטרפות_למייל_מיוזיק_דרך_שיר_בוט"
+  alt_text: "מייל מיוזיק - כל המוזיקה והקליפים החדשים אצלך במייל!"
+  tracking_id: "mail-music-right-banner"
 
 # ------------------------------------------------------------------------------
 # פרסומות שמורות בארכיון (לא פעילות)
 # ------------------------------------------------------------------------------
 
 archived_banners:
+  - name: "kley-meitar"
+    enabled: false
+    type: "image"
+    image_url: "/assets/images/ads/kley-meitar2.jpg"
+    link_url: "https://www.kley-meitar.co.il/?utm_source=shir-bot&utm_medium=referral"
+    alt_text: "כלי מיתר - כל הגיטרות במקום אחד"
+    tracking_id: "kley-meitar-right-banner"
   - name: "ze-kal-channel"
     enabled: false
     type: "image"
@@ -64,6 +71,23 @@ inline_ads:
   frequency: 13
   ads_list:
     - type: "image"
+      link_url: "https://l-p.site/הצטרפות_למייל_מיוזיק_דרך_שיר_בוט"
+      image_url: "/assets/images/ads/mail-music-inline.png"
+      alt_text: "מייל מיוזיק - כל הלהיטים והקליפים החדשים - ישר למייל שלך"
+      tracking_id: "inline-mail-music"
+    - type: "text"
+      title: "רוצים גישה למאגר המוזיקה המלא?"
+      text: "מאגר המוזיקה היהודית הגדול בעולם, עם מעל 500 ג'יגה של תוכן איכותי, מחכה לכם. הרשמו עכשיו וקבלו גישה מיידית!"
+      cta_text: "לפרטים והרשמה"
+      link_url: "https://docs.google.com/forms/d/e/1FAIpQLScfzba0porXVkKOPQR2OhY2kevGLFoPvnAkjC-Cs6KLm5idLg/viewform?usp=pp_url&entry.1611797152=https://shir-bot.ze-kal.top"
+      icon_class: "fas fa-database"
+      tracking_id: "inline-drive-access-form"
+    - type: "image"
+      link_url: "https://www.kley-meitar.co.il/?utm_source=shir-bot&utm_medium=referral"
+      image_url: "/assets/images/ads/kley-meitar1.jpg"
+      alt_text: "כלי מיתר - כל הגיטרות במקום אחד"
+      tracking_id: "inline-kley-meitar"
+    - type: "image"
       link_url: "https://www.youtube.com/@Ze-Kal"
       image_url: "/assets/images/ads/ze-kal-channel2.png"
       alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
@@ -75,18 +99,6 @@ inline_ads:
       link_url: "/advertise/"
       icon_class: "fas fa-bullhorn"
       tracking_id: "inline-cta-advertise-page"
-    - type: "image"
-      link_url: "https://www.kley-meitar.co.il/?utm_source=shir-bot&utm_medium=referral"
-      image_url: "/assets/images/ads/kley-meitar1.jpg"
-      alt_text: "כלי מיתר - כל הגיטרות במקום אחד"
-      tracking_id: "inline-kley-meitar"
-    - type: "text"
-      title: "רוצים גישה למאגר המוזיקה המלא?"
-      text: "מאגר המוזיקה היהודית הגדול בעולם, עם מעל 500 ג'יגה של תוכן איכותי, מחכה לכם. הרשמו עכשיו וקבלו גישה מיידית!"
-      cta_text: "לפרטים והרשמה"
-      link_url: "https://docs.google.com/forms/d/e/1FAIpQLScfzba0porXVkKOPQR2OhY2kevGLFoPvnAkjC-Cs6KLm5idLg/viewform?usp=pp_url&entry.1611797152=https://shir-bot.ze-kal.top"
-      icon_class: "fas fa-database"
-      tracking_id: "inline-drive-access-form"
     # - type: "text"
       # title: "תוכנת מסדר הסינגלים - להורדה חינם!"
       # text: "טובעים בים של סינגלים? תוכנה חכמה תמיין לכם את המוזיקה אוטומטית לתיקיות לפי אמן ותחסוך לכם שעות של עבודה!"
