feat(ads): Update left banner to promote YouTube channel
The left banner ad is updated to display the "Ze-Kal" YouTube channel promotion, replacing the default placeholder.

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -23,11 +23,11 @@ default_cta:
 # פרסומות צד שמאל
 # ==============================================================================
 left_banner:
-  enabled: false
-  image_url: "/assets/images/ads/ad-left-placeholder.png"
-  link_url: "https://example.com/left-ad"
-  alt_text: "פרסומת צד שמאל"
-  tracking_id: "left-ad-placeholder"
+  enabled: true
+  image_url: "/assets/images/ads/ze-kal-channel.png"
+  link_url: "https://www.youtube.com/@Ze-Kal"
+  alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
+  tracking_id: "ze-kal-youtube-channel-left"
 
 # ==============================================================================
 # פרסומות צד ימין
