--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -14,7 +14,7 @@
 default_cta:
   icon_class: "fas fa-bullseye"
   title: "העסק שלך. הקהל הנכון."
-  text: "חבר את המותג שלך לאלפי חובבי מוזיקה יהודית. פרסום ממוקד ואיכותי, החל מ-50 ש\"ח בלבד!"
+  text: "חבר את המותג שלך לאלפי חובבי מוזיקה יהודית. פרסום ממוקד ואיכותי!"
   button_text: "קבלו הצעת מחיר"
   link_url: "/advertise/"
   tracking_id: "cta-sidebar-advertise-page"
@@ -94,7 +94,7 @@ inline_ads:
       tracking_id: "inline-ze-kal-youtube-channel"
     - type: "link"
       title: "רוצים להגיע לקהל היעד שלכם?"
-      text: 'הגיעו לאלפי חובבי מוזיקה עם מסר ממוקד. פרסום אפקטיבי ומשתלם החל מ-50 ש"ח בלבד'
+      text: 'הגיעו לאלפי חובבי מוזיקה עם מסר ממוקד. פרסום אפקטיבי ומשתלם'
       cta_text: "לפרטים והצעת מחיר"
       link_url: "/advertise/"
       icon_class: "fas fa-bullhorn"
