feat(ads): Update and rotate sidebar and inline advertisements
This commit reorganizes the ad layout by rotating sidebar banners, introducing new 'Alef Bot' ads for transcribing Torah lessons, and archiving the previous 'Ze Kal' YouTube ad.

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -24,10 +24,11 @@ default_cta:
 # ==============================================================================
 left_banner:
   enabled: true
-  image_url: "/assets/images/ads/ze-kal-channel.png"
-  link_url: "https://www.youtube.com/@Ze-Kal"
-  alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
-  tracking_id: "ze-kal-youtube-channel-left"
+  type: "image"
+  image_url: "/assets/images/ads/mail-music-side.png"
+  link_url: "https://l-p.site/הצטרפות_למייל_מיוזיק_דרך_שיר_בוט"
+  alt_text: "מייל מיוזיק - כל המוזיקה והקליפים החדשים אצלך במייל!"
+  tracking_id: "mail-music-left-banner"
 
 # ==============================================================================
 # פרסומות צד ימין
@@ -37,10 +38,10 @@ left_banner:
 right_banner:
   enabled: true
   type: "image"
-  image_url: "/assets/images/ads/mail-music-side.png"
-  link_url: "https://l-p.site/הצטרפות_למייל_מיוזיק_דרך_שיר_בוט"
-  alt_text: "מייל מיוזיק - כל המוזיקה והקליפים החדשים אצלך במייל!"
-  tracking_id: "mail-music-right-banner"
+  image_url: "/assets/images/ads/alef-bot-vertical.png"
+  link_url: "https://alef-bot.top?utm_source=shirbot&utm_medium=banner&utm_campaign=launch&utm_content=vertical"
+  alt_text: "אלף בוט - תמלול אוטומטי של שיעורי תורה"
+  tracking_id: "alef-bot-right-banner"
 
 # ------------------------------------------------------------------------------
 # פרסומות שמורות בארכיון (לא פעילות)
@@ -61,6 +62,13 @@ archived_banners:
     link_url: "https://www.youtube.com/@Ze-Kal"
     alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
     tracking_id: "ze-kal-youtube-channel"
+  - name: "ze-kal-channel-left"
+    enabled: false
+    type: "image"
+    image_url: "/assets/images/ads/ze-kal-channel.png"
+    link_url: "https://www.youtube.com/@Ze-Kal"
+    alt_text: "ערוץ היוטיוב 'זה קל' - לימוד אנגלית וכתוביות שירים"
+    tracking_id: "ze-kal-youtube-channel-left"
 
 # ==============================================================================
 # פרסומות פנימיות (Inline)
@@ -70,6 +78,11 @@ inline_ads:
   enabled: true
   frequency: 13
   ads_list:
+    - type: "image"
+      link_url: "https://alef-bot.top?utm_source=shirbot&utm_medium=banner&utm_campaign=launch&utm_content=horizontal"
+      image_url: "/assets/images/ads/alef-bot-horizontal.png"
+      alt_text: "אלף בוט - תמלול אוטומטי של שיעורי תורה"
+      tracking_id: "inline-alef-bot"
     - type: "image"
       link_url: "https://l-p.site/הצטרפות_למייל_מיוזיק_דרך_שיר_בוט"
       image_url: "/assets/images/ads/mail-music-inline.png"
