הוספת פרסום המוהל

--- a/docs/_data/ads.yml
+++ b/docs/_data/ads.yml
@@ -38,16 +38,23 @@ left_banner:
 right_banner:
   enabled: true
   type: "image"
-  image_url: "/assets/images/ads/alef-bot-vertical.png"
-  link_url: "https://alef-bot.top?utm_source=shirbot&utm_medium=banner&utm_campaign=launch&utm_content=vertical"
-  alt_text: "אלף בוט - תמלול אוטומטי של שיעורי תורה"
-  tracking_id: "alef-bot-right-banner"
+  image_url: "/assets/images/ads/mohel-vertical.png"
+  link_url: "https://hamoyhel.com/?REF=19"
+  alt_text: "המוהל"
+  tracking_id: "mohel-right-banner"
 
 # ------------------------------------------------------------------------------
 # פרסומות שמורות בארכיון (לא פעילות)
 # ------------------------------------------------------------------------------
 
 archived_banners:
+  - name: "alef-bot-right"
+    enabled: false
+    type: "image"
+    image_url: "/assets/images/ads/alef-bot-vertical.png"
+    link_url: "https://alef-bot.top?utm_source=shirbot&utm_medium=banner&utm_campaign=launch&utm_content=vertical"
+    alt_text: "אלף בוט - תמלול אוטומטי של שיעורי תורה"
+    tracking_id: "alef-bot-right-banner"
   - name: "kley-meitar"
     enabled: false
     type: "image"
@@ -78,6 +85,11 @@ inline_ads:
   enabled: true
   frequency: 13
   ads_list:
+    - type: "image"
+      link_url: "https://hamoyhel.com/?REF=19"
+      image_url: "/assets/images/ads/mohel-horizontal.png"
+      alt_text: "המוהל"
+      tracking_id: "inline-mohel"
     - type: "image"
       link_url: "https://alef-bot.top?utm_source=shirbot&utm_medium=banner&utm_campaign=launch&utm_content=horizontal"
       image_url: "/assets/images/ads/alef-bot-horizontal.png"
